--- a/styles.css
+++ b/styles.css
@@ -683,7 +683,7 @@ input[type="submit"]:focus{
 
 #software h3{
     grid-column: 1/-1;
-    text-align center:
+    text-align:center;
 }
 
 /* ----- */
